plugins {
    id 'java'
    id 'io.qameta.allure' version '2.12.0'
}

group = 'com.shlapabank'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

ext {
    allureVersion    = '2.25.0'
    cucumberVersion  = '7.15.0'
    restAssuredVersion = '5.4.0'
    selenideVersion  = '6.19.1'
    junitVersion     = '5.10.2'
    ownerVersion     = '1.0.12'
    postgresqlVersion = '42.7.1'
    lombokVersion    = '1.18.30'
    assertjVersion   = '3.24.2'
    slf4jVersion     = '2.0.7'
}

dependencies {
    // REST API
    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
    testImplementation "io.rest-assured:json-path:${restAssuredVersion}"
    testImplementation "io.rest-assured:xml-path:${restAssuredVersion}"
    testImplementation "io.rest-assured:json-schema-validator:${restAssuredVersion}"

    // UI
    testImplementation "com.codeborne:selenide:${selenideVersion}"

    // Mobile
    testImplementation 'io.appium:java-client:8.6.0'

    // Cucumber
    testImplementation "io.cucumber:cucumber-java:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}"
    testImplementation "io.cucumber:cucumber-picocontainer:${cucumberVersion}"

    // JUnit 5
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
    testImplementation "org.junit.platform:junit-platform-suite:1.10.2"
    testImplementation "org.junit.platform:junit-platform-launcher:1.10.2"

    // Allure
    testImplementation "io.qameta.allure:allure-cucumber7-jvm:${allureVersion}"
    testImplementation "io.qameta.allure:allure-rest-assured:${allureVersion}"
    testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"

    // Assertions
    testImplementation "org.assertj:assertj-core:${assertjVersion}"

    // Config
    testImplementation "org.aeonbits.owner:owner:${ownerVersion}"

    // Database
    testImplementation "org.postgresql:postgresql:${postgresqlVersion}"

    // Logging
    testImplementation "org.slf4j:slf4j-api:${slf4jVersion}"
    testRuntimeOnly   "org.slf4j:slf4j-simple:${slf4jVersion}"

    // Lombok
    compileOnly         "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testCompileOnly         "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

// Общие настройки для ВСЕХ тестовых тасков
tasks.withType(Test) {
    useJUnitPlatform()
    systemProperty "file.encoding", "UTF-8"
    systemProperty "user.timezone", "UTC"
    systemProperty "cucumber.junit-platform.naming-strategy", "long"
    systemProperty "allure.results.directory", "build/allure-results"

    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

test {
    systemProperty "env", System.getProperty("env", "local")
}

task smokeTest(type: Test) {
    systemProperty "env", System.getProperty("env", "ci")
    systemProperty "cucumber.filter.tags", "@Smoke"
}

task regressionTest(type: Test) {
    systemProperty "env", System.getProperty("env", "ci")
    systemProperty "cucumber.filter.tags", "@Regression"
}

task apiTest(type: Test) {
    systemProperty "env", System.getProperty("env", "ci")
    systemProperty "cucumber.filter.tags", "@API"
}

task debugTest(type: Test) {
    systemProperty "env", System.getProperty("env", "ci")
    systemProperty "cucumber.filter.tags", "@Debug"
}

allure {
    report {
        version.set(allureVersion)
    }
    adapter {
        aspectjWeaver.set(true)
        frameworks {
            junit5 {
                adapterVersion.set(allureVersion)
            }
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

wrapper {
    gradleVersion = '8.5'
    distributionType = Wrapper.DistributionType.ALL
}
